# 2952O_Final_Project

./: CMakeLists.txt  README.md  coordinate_calibrate.py  install_requirements.py  main.py  mask_rcnn.py  measure_object_distance.py  mirobot.py  oak_d_lite.py  object_tracker.py  package.xml  requirements.txt  spatial_coordinate.py  yolov5_realsense.py
app/client/: package-lock.json  package.json
app/client/src/: App.css  App.js
app/client/src/components/main/: Main.js
app/client/src/components/realsense/: Realsense.js  RealsenseMask.js  RealsenseYolo.js
app/client/src/components/simple/: Simple.js
app/flask-server/: mask_rcnn.py  measure_object_distance.py  package-lock.json  realsense.py  realsense_camera.py  server.py  web_mask_rcnn.py  web_mirobot.py  web_yolov5_realsense.py  webcam.py
calibration /: coordinate_calibrate.py  spatial_coordinate.py
launch/: pick-place.launch  setup_tf.launch  test.launch  yolov4_depthai.launch
src/: fake_publisher.py  joint_state_publisher.py  moveit_group_python_interface.py  moveit_group_python_mirobot.py  rgb_listener.py  tf2_broadcaster.py  tf2_depthai_broadcaster.py  tf2_depthai_mirobot_broadcaster.py  tf2_depthai_target_broadcaster.py  tf2_listener.py  tf_broadcaster.cpp  yolov4_listener.py  yolov4_processor.py  yolov4_publisher.py
weights/: .download_weights.sh.icloud
